--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Promact - Startup IT Services Specialist</title>
+	<link rel="shortcut icon" href="images/favicon.ico">
 <!--build:css css/styles.min.css-->
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 <!--endbuild-->
    
@@ -40,10 +40,12 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-	<div class="main-banner">
+	<div class="main-banner animated fadeIn">
 		<div class="banner-content">
 			<h1>Do not wait — <span>launch</span> your startup now!</h1>
+			<p><strong>Promact: Startup IT Services Specialist</strong><br>We have a unique expertise in dealing with startups and managing stacks.</p>
 		</div>
+		<a href="#" class="scrolldown-arrow animated infinite pulse"><i class="glyphicon glyphicon-chevron-down"></i></a>
 	</div>
 	<!--build:js js/main.min.js -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
