--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 <!--build:css css/styles.min.css-->
     <!-- Bootstrap -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="css/owl/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl/owl.theme.default.min.css">
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
